[tool.poetry]
name = "xgrapher"
version = "0.1.0"
description = "CRU(xD) into ONgDB without any worries"
authors = ["Manu <grajmanu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
torch = "1.7.0"
fastapi = "^0.65.2"
loguru = "^0.5.3"
uvicorn = "^0.14.0"
redis = "^3.5.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.17.1"
flake8 = "^3.9.2"
python-multipart = "^0.0.5"
py2neo = "^2021.1.5"
neo4j-driver = "1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
autoflake = "^1.4"
black = "^21.6b0"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
